ossm/app/frontend-gw.yml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: frontend-gw
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - %INGRESS_HOST%
